tests/baselines/reference/importAliasFromNamespace.errors.txt
usage.ts(5,17): error TS2564: Property '_which' has no initializer and is not definitely assigned in the constructor.
usage.ts(8,13): error TS2845: This condition will always return 'false'.


==== usage.ts (2 errors) ====
    /// <reference path="./internal.ts" preserve="true" />
    namespace SomeOther.Thing {
        import Internal = My.Internal;
        export class Foo {
            private _which: Internal.WhichThing;
                    ~~~~~~
!!! error TS2564: Property '_which' has no initializer and is not definitely assigned in the constructor.
            constructor() {
                Internal.getThing();
                Internal.WhichThing.A ? "foo" : "bar";
                ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2845: This condition will always return 'false'.
            }
        }
    }
==== internal.ts (0 errors) ====
    namespace My.Internal {
        export function getThing(): void {}
        export const enum WhichThing {
            A, B, C
        }
    }
    